--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6,13 +6,6 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\6M4T4HFU\\j.1365-3040.1998.00364.html}
 }
 
-@online{AcclimationLeafNitrogen,
-  title = {Acclimation of {{Leaf Nitrogen}} to {{Vertical Light Gradient}} at {{Anthesis}} in {{Wheat Is}} a {{Whole}}-{{Plant Process That Scales}} with the {{Size}} of the {{Canopy}} | {{Plant Physiology}}},
-  url = {http://www.plantphysiol.org/content/160/3/1479},
-  urldate = {2020-10-07},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\6XEAGURQ\\1479.html}
-}
-
 @book{aGradientsLightAvailabilitya,
   title = {Gradients of Light Availability and Leaf Traits with Leaf Age and Canopy Position in 28 {{Australian}} Shrubs and Trees},
   author = {A, Ian J. Wright and A, Michelle R. Leishman and A, Cassia Read and A, Mark Westoby},
@@ -975,27 +968,6 @@
   keywords = {Amazon,canopy conductance,eddy covariance,leaf gas exchange,temperature,tropical forest},
   langid = {english},
   number = {G1}
-}
-
-@article{duqueThermophilizationAdultJuvenile2015,
-  title = {Thermophilization of Adult and Juvenile Tree Communities in the Northern Tropical {{Andes}}},
-  author = {Duque, Alvaro and Stevenson, Pablo R. and Feeley, Kenneth J.},
-  date = {2015-08-25},
-  journaltitle = {PNAS},
-  volume = {112},
-  pages = {10744--10749},
-  publisher = {{National Academy of Sciences}},
-  issn = {0027-8424, 1091-6490},
-  doi = {10.1073/pnas.1506570112},
-  url = {http://www.pnas.org/content/112/34/10744},
-  urldate = {2020-12-30},
-  abstract = {Climate change is expected to cause shifts in the composition of tropical montane forests towards increased relative abundances of species whose ranges were previously centered at lower, hotter elevations. To investigate this process of “thermophilization,” we analyzed patterns of compositional change over the last decade using recensus data from a network of 16 adult and juvenile tree plots in the tropical forests of northern Andes Mountains and adjacent lowlands in northwestern Colombia. Analyses show evidence that tree species composition is strongly linked to temperature and that composition is changing directionally through time, potentially in response to climate change and increasing temperatures. Mean rates of thermophilization [thermal migration rate (TMR), °C⋅y−1] across all censuses were 0.011 °C⋅y−1 (95\% confidence interval = 0.002–0.022 °C⋅y−1) for adult trees and 0.027 °C⋅y−1 (95\% confidence interval = 0.009–0.050 °C⋅y−1) for juvenile trees. The fact that thermophilization is occurring in both the adult and juvenile trees and at rates consistent with concurrent warming supports the hypothesis that the observed compositional changes are part of a long-term process, such as global warming, and are not a response to any single episodic event. The observed changes in composition were driven primarily by patterns of tree mortality, indicating that the changes in composition are mostly via range retractions, rather than range shifts or expansions. These results all indicate that tropical forests are being strongly affected by climate change and suggest that many species will be at elevated risk for extinction as warming continues.},
-  eprint = {26261350},
-  eprinttype = {pmid},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\H4F3VPN8\\Duque et al. - 2015 - Thermophilization of adult and juvenile tree commu.pdf;C\:\\Users\\Me\\Zotero\\storage\\L4UUMX8G\\10744.html;C\:\\Users\\Me\\Zotero\\storage\\VK62RAS8\\10744.html},
-  keywords = {climate change,conservation biogeography,dispersal modes,species migrations,thermal niches},
-  langid = {english},
-  number = {34}
 }
 
 @article{duqueThermophilizationAdultJuvenile2015a,
@@ -2124,6 +2096,41 @@
   langid = {english}
 }
 
+@article{liVariationLeafChlorophyll2018a,
+  title = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests: {{Association}} with Gross Primary Productivity},
+  shorttitle = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests},
+  author = {Li, Ying and Liu, Congcong and Zhang, Jiahui and Yang, Hao and Xu, Li and Wang, Qiufeng and Sack, Lawren and Wu, Xiuqin and Hou, Jihua and He, Nianpeng},
+  date = {2018-02-01},
+  journaltitle = {Ecological Indicators},
+  volume = {85},
+  pages = {383--389},
+  issn = {1470-160X},
+  doi = {10.1016/j.ecolind.2017.10.025},
+  url = {http://www.sciencedirect.com/science/article/pii/S1470160X17306635},
+  urldate = {2020-12-31},
+  abstract = {Leaf chlorophyll is essential to harvest light energy to drive photosynthesis. Yet, most of studies of leaf chlorophyll concentration (Chl) have typically been limited to few species or sites, and there has been little understanding of its variation among species of contrasting environments, or across forests differing in gross primary productivity (GPP). We measured mass-based foliar Chl concentrations (Chl a, Chl b, and total Chl) for 937 species of nine Chinese forests ranging from tropical to cold-temperate regions. Total Chl varied by over ten-fold from 1.45 to 19.2mgg−1 (mean: 5.54mgg−1), and differed among plant functional groups. At the community level, total Chl decreased with increasing latitude. The ratio of Chl a/b decreased from trees to shrubs to herbs, consistent with adaptation to contrasting irradiance, i.e., overstory vs. understory. Total Chl was positively related to leaf N and P concentrations, as would be expected to optimize photosynthesis and carbon fixation. Across forests, GPP was positively correlated with community-averaged Chl (r=0.57; P{$<$}0.01), a new case of a linkage between leaf traits and ecosystem function at regional to continental scale. Our findings revealed variation in Chl from tropical to cold-temperate forests, and the linkage of leaf Chl with ecosystem function, enhancing our ability to parameterize vegetation models.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\IW7SKDWU\\S1470160X17306635.html;C\:\\Users\\Me\\Zotero\\storage\\UDWV57KI\\S1470160X17306635.html},
+  keywords = {Chl,Chlorophyll,Community,Forest,Functional traits,GPP,Nutrients,Photosynthesis,Pigments,Spatial variation,Trait},
+  langid = {english}
+}
+
+@article{liVariationLeafChlorophyll2018b,
+  title = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests: {{Association}} with Gross Primary Productivity},
+  shorttitle = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests},
+  author = {Li, Ying and Liu, Congcong and Zhang, Jiahui and Yang, Hao and Xu, Li and Wang, Qiufeng and Sack, Lawren and Wu, Xiuqin and Hou, Jihua and He, Nianpeng},
+  date = {2018-02},
+  journaltitle = {Ecological Indicators},
+  volume = {85},
+  pages = {383--389},
+  issn = {1470160X},
+  doi = {10.1016/j.ecolind.2017.10.025},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1470160X17306635},
+  urldate = {2020-12-31},
+  abstract = {Leaf chlorophyll is essential to harvest light energy to drive photosynthesis. Yet, most of studies of leaf chlorophyll concentration (Chl) have typically been limited to few species or sites, and there has been little understanding of its variation among species of contrasting environments, or across forests differing in gross primary productivity (GPP). We measured mass-based foliar Chl concentrations (Chl a, Chl b, and total Chl) for 937 species of nine Chinese forests ranging from tropical to cold-temperate regions. Total Chl varied by over ten-fold from 1.45 to 19.2 mg g−1 (mean: 5.54 mg g−1), and differed among plant functional groups. At the community level, total Chl decreased with increasing latitude. The ratio of Chl a/b decreased from trees to shrubs to herbs, consistent with adaptation to contrasting irradiance, i.e., overstory vs. understory. Total Chl was positively related to leaf N and P concentrations, as would be expected to optimize photosynthesis and carbon fixation. Across forests, GPP was positively correlated with community-averaged Chl (r = 0.57; P {$<$} 0.01), a new case of a linkage between leaf traits and ecosystem function at regional to continental scale. Our findings revealed variation in Chl from tropical to cold-temperate forests, and the linkage of leaf Chl with ecosystem function, enhancing our ability to parameterize vegetation models.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MRJ7RUR9\\main.pdf},
+  langid = {english}
+}
+
 @article{liWarmingEffectsPhotosynthesis2016,
   title = {Warming Effects on Photosynthesis of Subtropical Tree Species: A Translocation Experiment along an Altitudinal Gradient},
   shorttitle = {Warming Effects on Photosynthesis of Subtropical Tree Species},
@@ -2787,23 +2794,6 @@
   url = {https://linkinghub.elsevier.com/retrieve/pii/S0169534717300599},
   urldate = {2020-09-28},
   file = {C\:\\Users\\Me\\Zotero\\storage\\2BZEH3PN\\Nakamura et al. - 2017 - Forests and Their Canopies Achievements and Horiz.pdf},
-  langid = {english},
-  number = {6}
-}
-
-@article{nakamuraForestsTheirCanopies2017a,
-  title = {Forests and {{Their Canopies}}: {{Achievements}} and {{Horizons}} in {{Canopy Science}}},
-  shorttitle = {Forests and {{Their Canopies}}},
-  author = {Nakamura, Akihiro and Kitching, Roger L. and Cao, Min and Creedy, Thomas J. and Fayle, Tom M. and Freiberg, Martin and Hewitt, C.N. and Itioka, Takao and Koh, Lian Pin and Ma, Keping and Malhi, Yadvinder and Mitchell, Andrew and Novotny, Vojtech and Ozanne, Claire M.P. and Song, Liang and Wang, Han and Ashton, Louise A.},
-  date = {2017-06},
-  journaltitle = {Trends in Ecology \& Evolution},
-  volume = {32},
-  pages = {438--451},
-  issn = {01695347},
-  doi = {10.1016/j.tree.2017.02.020},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/S0169534717300599},
-  urldate = {2020-09-28},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\5RUWP2WT\\Nakamura et al. - 2017 - Forests and Their Canopies Achievements and Horiz.pdf},
   langid = {english},
   number = {6}
 }
@@ -3513,12 +3503,6 @@
   urldate = {2020-12-28}
 }
 
-@online{PlasticLeafMorphologya,
-  title = {Plastic Leaf Morphology in Three Species of {{Quercus}}: {{The}} More Exposed Leaves Are Smaller, More Lobated and Denser - {{Kusi}} - 2020 - {{Plant Species Biology}} - {{Wiley Online Library}}},
-  url = {https://esj-journals-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1111/1442-1984.12253},
-  urldate = {2020-12-28}
-}
-
 @article{poorterCausesConsequencesVariation2009a,
   title = {Causes and Consequences of Variation in Leaf Mass per Area ({{LMA}}): A Meta-Analysis},
   shorttitle = {Causes and Consequences of Variation in Leaf Mass per Area ({{LMA}})},
@@ -3553,16 +3537,6 @@
   eprint = {2656452},
   eprinttype = {jstor},
   number = {3}
-}
-
-@article{poorterLeafOpticalProperties,
-  title = {Leaf {{Optical Properties Along}} a {{Vertical Gradient}} in a {{Tropical Rain Forest Canopy}} in {{Costa Rica}}},
-  author = {Poorter, Lourens and Oberbauer, Steven F and Clark, David B},
-  journaltitle = {AMERICAN JOURNAL OF BOTANY},
-  volume = {82},
-  pages = {7},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\WUHDPNBZ\\Poorter et al. - Leaf Optical Properties Along a Vertical Gradient .pdf},
-  langid = {english}
 }
 
 @article{poorterLeafOpticalProperties1995,
@@ -3802,6 +3776,16 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\DLH87887\\Rey-Sánchez et al. - 2016 - Spatial and seasonal variation in leaf temperature.pdf},
   langid = {english},
   number = {1}
+}
+
+@incollection{richardsonPhenologicalDifferencesUnderstory2009,
+  title = {Phenological {{Differences Between Understory}} and {{Overstory}}},
+  author = {Richardson, Andrew and O'Keefe, John},
+  date = {2009-05-06},
+  pages = {87--117},
+  doi = {10.1007/978-1-4419-0026-5_4},
+  abstract = {The timing of phenological events varies both among species, and also among individuals of the same species. Here we use a 12-year record of spring and autumn phenology for 33 woody species at the Harvard Forest to investigate these differences. Specifically, we focus on patterns of leaf budburst, expansion, coloration and fall, in the context of differences between canopy and understory species, and between canopy and understory individuals of the same species. Many understory species appear to adopt a strategy of “phenological escape” in spring but not autumn, taking advantage of the high-light period in spring before canopy development. For all but a few of these species, the spring escape period is very brief. Relationships between canopy and understory conspecifics (i.e. individuals of the same species) varied among species, with leaf budburst and leaf fall occurring earlier in understory individuals of some species, but later in other species. We fit standard models of varying complexity to the budburst time series for each species to investigate whether biological responses to environmental cues differed among species. While there was no clear consensus model, Akaike’s Information Criterion (AIC) indicated that a simple two-parameter “Spring warming” model was best supported by the data for more than a third of all species, and well supported for two-thirds of all species. More highly-parameterized models involving various chilling requirements (e.g., Alternating, Parallel or Sequential chilling) were less well supported by the data. Species-specific model parameterization suggested that responses to both chilling and forcing temperatures vary among species. While there were no obvious differences in this regard between canopy and understory species, or between early- and late-budburst species, these results imply that species can be expected to differ in their responses to future climate change.},
+  isbn = {978-1-4419-0025-8}
 }
 
 @article{rijkersEffectTreeHeight2000a,
@@ -5240,25 +5224,6 @@
   langid = {english},
   number = {12},
   options = {useprefix=true}
-}
-
-@article{zellwegerSeasonalDriversUnderstorey2019b,
-  title = {Seasonal Drivers of Understorey Temperature Buffering in Temperate Deciduous Forests across {{Europe}}},
-  author = {Zellweger, Florian and Coomes, David and Lenoir, Jonathan and Depauw, Leen and Maes, Sybryn L. and Wulf, Monika and Kirby, Keith J. and Brunet, Jörg and Kopecký, Martin and Máliš, František and Schmidt, Wolfgang and Heinrichs, Steffi and den Ouden, Jan and Jaroszewicz, Bogdan and Buyse, Gauthier and Spicher, Fabien and Verheyen, Kris and Frenne, Pieter De},
-  date = {2019},
-  journaltitle = {Global Ecology and Biogeography},
-  volume = {28},
-  pages = {1774--1786},
-  issn = {1466-8238},
-  doi = {10.1111/geb.12991},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.12991},
-  urldate = {2020-07-17},
-  abstract = {Aim Forest understorey microclimates are often buffered against extreme heat or cold, with important implications for the organisms living in these environments. We quantified seasonal effects of understorey microclimate predictors describing canopy structure, canopy composition and topography (i.e., local factors) and the forest patch size and distance to the coast (i.e., landscape factors). Location Temperate forests in Europe. Time period 2017–2018. Major taxa studied Woody plants. Methods We combined data from a microclimate sensor network with weather-station records to calculate the difference, or offset, between temperatures measured inside and outside forests. We used regression analysis to study the effects of local and landscape factors on the seasonal offset of minimum, mean and maximum temperatures. Results The maximum temperature during the summer was on average cooler by 2.1 °C inside than outside forests, and the minimum temperatures during the winter and spring were 0.4 and 0.9 °C warmer. The local canopy cover was a strong nonlinear driver of the maximum temperature offset during summer, and we found increased cooling beneath tree species that cast the deepest shade. Seasonal offsets of minimum temperature were mainly regulated by landscape and topographic features, such as the distance to the coast and topographic position. Main conclusions Forest organisms experience less severe temperature extremes than suggested by currently available macroclimate data; therefore, climate–species relationships and the responses of species to anthropogenic global warming cannot be modelled accurately in forests using macroclimate data alone. Changes in canopy cover and composition will strongly modulate the warming of maximum temperatures in forest understories, with important implications for understanding the responses of forest biodiversity and functioning to the combined threats of land-use change and climate change. Our predictive models are generally applicable across lowland temperate deciduous forests, providing ecologically important microclimate data for forest understories.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12991},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\5AP3TB2H\\Zellweger et al. - 2019 - Seasonal drivers of understorey temperature buffer.pdf;C\:\\Users\\Me\\Zotero\\storage\\YHL7EWD5\\geb.html},
-  keywords = {canopy density,climate change,forest composition,forest structure,global warming,macroclimate,microclimate,temperature buffering,understorey},
-  langid = {english},
-  number = {12}
 }
 
 @article{zhang_photosynthetic_2012,
