--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -107,12 +107,12 @@ These changes are expected to have profound effects on forest biodiversity and e
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
 
-Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@nakamuraForestsTheirCanopies2017; @ozanneBiodiversityMeetsAtmosphere2003] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient.[Bertrand et al. 2011]
+Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient.[Bertrand et al. 2011]
 
-The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
-Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a]. Evidence shows that larger trees suffer during drought resulting in heat stressed canopy-leaves, which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to occur [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
+The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
+Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Evidence shows that larger trees suffer during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to occur [@@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. As a result, understories experience a different set of microclimatic pressures, e.g limited light and related foliar traits, inter-species competition etc.. with rising temperature [@bartholomewSmallTropicalForest2020]. Since temperature is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming [@bertrandCommentForestMicroclimate2020]. As a result, understories experience a different set of microclimatic pressures with rising temperature in combination with conditions of limited light and related foliar traits, inter-species resource competition etc.. [@bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Tree-ring evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with other studies that show thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
 Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellPervasiveShiftsForest2020].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
@@ -201,8 +201,8 @@ Along with temperature, forest canopies moderate relative humidity in below-cano
 
 With rising temperatures, this trend in maximum $T_{air}$ and RH would have implications for understory seedling growth, especially in high altitude temperate pine forests and montane forests  [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018] (to clarify why? are these high elevation forests limited by low temperature and low rh?)  
 
-RH, in combination with temperature, determines vapor pressure deficit, $VPD$. Atlantic forests during wet season tended to have higher $T_{air}$, and $VPD$ in upper canopy and canopy gaps than lower in understory where $T_{air}$ and $VPD$ were lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].
-This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomtal contrains and lower osmotic potential. [@niinemetsPhotosyntheticAcclimationSimultaneous2004a]
+RH, in combination with temperature, determines vapor pressure deficit, $VPD$. Atlantic forests during wet season tended to have higher $T_{air}$, and $VPD$ in upper canopy and canopy gaps than lower in understory where $T_{air}$ and $VPD$ were lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].  
+This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomtal contrains and lower osmotic potential. [@niinemetsPhotosyntheticAcclimationSimultaneous2004a]. In North Eastern US temperate forests, upper canopy was observed to be more sensitive to $VPD$, whereas as understory was insensitive [[@rollinsonClimateSensitivityUnderstory, 2020]
 
 **Finally, carbon dioxide (CO~2~) concentrations tend to be higher in the understory.** 
 -	Higher in understory, particularly at dusk (Koike et al. 2001).
