--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,13 +110,14 @@ These changes are expected to have profound effects on forest biodiversity and e
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient.[Bertrand et al. 2011]
 
 The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
-Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Evidence shows that larger trees suffer during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to occur [@@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
+Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Evidence shows that larger trees suffer during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to occur [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming [@bertrandCommentForestMicroclimate2020]. As a result, understories experience a different set of microclimatic pressures with rising temperature in combination with conditions of limited light and related foliar traits, inter-species resource competition etc.. [@bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Tree-ring evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with other studies that show thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming [@bertrandCommentForestMicroclimate2020]. As a result, understories experience a different set of microclimatic pressures with rising temperature in combination with conditions of limited light and related foliar traits, inter-species resource competition etc.. [@bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Tree-ring evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with other studies that show thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering continued frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
+
 Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellPervasiveShiftsForest2020].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
-While there is evidence for temperature driven shifts in forest dynamics, leaf-level temperature and metabolism changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
+While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
@@ -164,7 +165,8 @@ In this review, we focus primarily on growing season conditions, including leaf 
 Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, across species and forest types due to cumulative layers of vegetation [@koike_leaf_2001]. Generally, upper canopies in dense forests are exposed to greater PAR values and limit light to canopy interiors, lower canopy layers and understories. Shaded regions under canopy cover experience lower values and quality of PAR [in ranges of blue, orange and red]. The gradient of light is more pronounced under broadleaved forests than conifers[@aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 In heterogeneous canopies [with high gap fractions], distance from the outer canopy is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gap to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. 
- Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006].
+ 
+Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006].
 This difference in light regime along a vertical profile is an important driver of plasticity in leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient. Leaves along a vertical intra-canopy gradient thus exhibit a variation in leaf trait adapaptions to a range of high light to shaded-ness [@michaletzEnergeticCarbonEconomic2016; @fauset_differences_2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008; Niinemets and Valladares 2006].
 
 -	Sunflecks: Leaky et al. 2003--from Marielle, "This is another, higher resolution axis of the variability of microenvironments that is probably quite important to address. (Also see the papers by Robin Chazdon on temporal variability of light environments). Maybe we will want to add these sentences (above) and something about sunflecks to a separate section that specifically addresses sources of variation in forest structure & microenvironments (e.g., vertical, horizontal, seasonal, diurnal, and with disturbance)?"
@@ -179,7 +181,7 @@ Greater upper canopy wind speeds result in higher boundary layer conductance ($g
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a] and in the northwestern United States [@davis_microclimatic_2019]. Even though canopy cover buffers maximum air temperatures in the understory, inevitable increase in understory temperatures continue to be observed as a result of global increase in temperatures, however the buffering by canopy cover smoothens this warming in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020;@rollinsonClimateSensitivityUnderstory]
 
-Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [@@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
+Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
 
 Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
 
@@ -242,17 +244,16 @@ However vertical climate gradients within forests are known to be steeper than t
 
 ## Trait variation 
 
-Leaf traits are shaped by intra canopy light and height, and show intra-canopy plasticity in accordance with intensity and availability of light. Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.Degrees of high irradiance has consequential adaptations in leaf morphology compared to degrees of low irradiance to shaded-ness [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. This dichotomy in leaf traits that vary with light intensity generally differ within intra-canopy, however the degree of intra-canopy plasticity also varies across species and geographically [@sackHowStrongIntracanopy2006; @ishiiVariationIntracrownLeaf2018].
+Leaf traits are shaped by intra canopy light and height, and show intra-canopy foliar plasticity in accordance with the intensity and availability of light. Degrees of high irradiance gives rise to sun-leaf morphology compared to degrees of low irradiance characterized by shade shapes shade-leaf morphology [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. The degree of intra-canopy plasticity also varies across species and geographically [@sackHowStrongIntracanopy2006; @ishiiVariationIntracrownLeaf2018].
 
-Adaptions of traits to ranges of sun-exposure or shaded-ness also vary within a forest strata. 
-Understory species may have conservative  growth strategies because they are resource (light) limited. Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well. Their traits will be different from shade leaves of canopy trees as well. E.g.
+Adaptions of traits to ranges of sun-exposure or shaded-ness vary within a forest strata among trees of different sizes.Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.
+Cateogorization of sun and shade tolerance from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered.[refs, -Martijn Slot]
+
+The variation and quanitity of light falling on leaves is perceived through a network of phytohormones that regulate leaf acclimation to light conditions and consequential strategies to regulate growth [Mathur et al. 2018]. Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis
+.Spending their lifecycle in the shade means they have different pressures [such as competition for light or adapting leaf traits to maximum light capture and use efficiency] than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well. Their traits will be different from shade leaves of canopy trees as well. E.g.
 They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
-Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered.[refs]
 
-Cateogorization of sun and shade tolerance from @niinemetsControversyTraitsConferring2006: "The five-level scale used for shade tolerance (1,
-very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%"
-
-Passing light in the forest understory often caused by over-canopy vegetation and wind speed called sunflecks cause a different type of morphological adaptation in shaded leaves [characterized by low LMA and greater effective leaf width] that make them efficient in capturing >50% of light through sunflecks for photosynthesis [@chazdonPhotosyntheticLightEnvironments1984]
+Passing light called sunflecks in the forest understory often caused by over-canopy vegetation gaps and wind speed cause a different type of morphological adaptation in shaded leaves [characterized by low LMA and greater effective leaf width] that make them efficient in capturing >50% of light through sunflecks for photosynthesis [@chazdonPhotosyntheticLightEnvironments1984]
 
 [I think that this distinction should be addressed throughout the manuscript, so that it is always clear that the reader knows whether the cited references are about inter- or intra-specific variation, and that we address the different trait axes (Marielle made a comment on this earlier as well, that within species patterns may not follow leaf economics spectrum expectations). Ideally we would address the different categories, but if lack of information forces us to focus on just within species or just across species, this should still be made clear. photosynthesis, and canopy-level carbon uptake. They don't have to be treated separately, but it should always be clear which is being referred to. And in the consequences for scaling section this is of course also relevant.]
 
@@ -278,6 +279,7 @@ Are traits shaped more by height or light?
 -	 “Height is more important than light in determining leaf morphology in a tropical forest” (Cavaleri et al. 2010)
 - 	(Cavaleri et al. 2008) 
 - from Martijn: "If I remember correctly, height and light exposure are closely correlated and things like LMA scale with both, but above a certain level of light exposure, the effect of additional light disappears, while the relationship of the morphological traits with height continues. I have often been a bit skeptical about assuming height drives morphology, as most of the work that convincingly shows that (and relates it to turgor pressure for example) is from 100 m tall redwoods."
+-"Our study suggests that height plays an important role in the leaf traits, in contrast with previous findings (Baranski, 1975; Sack et al., 2006).In Quercus. alba and Quercus. velutina, loba-tion decreased with increasing tree height. Lobation allows air passage and light penetration in the tree canopy (Sack et al., 2006; Semchenko & Zobel, 2007)" [@kusiPlasticLeafMorphology2020]
 
 *Leaf area / characteristic dimension*:
 - Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
