--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -246,11 +246,18 @@ However vertical climate gradients within forests are known to be steeper than t
 
 Leaf traits are shaped by intra canopy light and height, and show intra-canopy foliar plasticity in accordance with the intensity and availability of light. Degrees of high irradiance gives rise to sun-leaf morphology compared to degrees of low irradiance characterized by shade shapes shade-leaf morphology [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. The degree of intra-canopy plasticity also varies across species and geographically [@sackHowStrongIntracanopy2006; @ishiiVariationIntracrownLeaf2018].
 
-Adaptions of traits to ranges of sun-exposure or shaded-ness vary within a forest strata among trees of different sizes.Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.
+Adaptions of traits to ranges of sun-exposure or shaded-ness vary within a forest strata among trees of different sizes.
 Cateogorization of sun and shade tolerance from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered.[refs, -Martijn Slot]
 
-The variation and quanitity of light falling on leaves is perceived through a network of phytohormones that regulate leaf acclimation to light conditions and consequential strategies to regulate growth [Mathur et al. 2018]. Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis
-.Spending their lifecycle in the shade means they have different pressures [such as competition for light or adapting leaf traits to maximum light capture and use efficiency] than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well. Their traits will be different from shade leaves of canopy trees as well. E.g.
+The variation and quanitity of light falling on leaves is perceived through a network of phytohormones that regulate leaf acclimation to light conditions and consequential strategies to regulate growth [Mathur et al. 2018]. Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis.
+
+Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.As a result the different combination of stressors experienced by taller trees with foliage exposed to greater PAR are different from the combination of stressors experienced by understory shorter trees with shaded/semi-shaded leaves [Niinemetes et al. 2010] 
+"Spending their lifecycle in the shade means they have different pressures [such as competition for light or adapting leaf traits to maximum light capture and use efficiency] than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn]
+Additionally, increased exposure to light increases the carbon reserve, plant height, foliage robustness,  while also increasing evapotranspiration, decreasing hydraulic conductivity, increasing chances of photoinhibition in leaves should water availbility become limited. However, understory shaded/younger trees have comparitively less carbon reserve due to light limitation as a primary stressor, decreased plant biomass, increased leaf biomass, and drecreased evapotransition demands. Larger carbon reserves in trees with greater light and water availability allows them to tolerate greater number of stressors compared to understory/younger trees that are able to tolerate only a fewer stressors making them overall more sensitive to stress [such as temperature]. Thus, overall stress sensitivity decreases with increasing height, light and age.[@niinemetsResponsesForestTrees2010a]
+
+
+
+Their traits will be different from shade leaves of canopy trees as well. E.g.
 They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
 
 Passing light called sunflecks in the forest understory often caused by over-canopy vegetation gaps and wind speed cause a different type of morphological adaptation in shaded leaves [characterized by low LMA and greater effective leaf width] that make them efficient in capturing >50% of light through sunflecks for photosynthesis [@chazdonPhotosyntheticLightEnvironments1984]
