--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -322,6 +322,26 @@
   number = {10}
 }
 
+@article{bertrandChangesPlantCommunity2011,
+  title = {Changes in Plant Community Composition Lag behind Climate Warming in Lowland Forests},
+  author = {Bertrand, Romain and Lenoir, Jonathan and Piedallu, Christian and Riofrío-Dillon, Gabriela and de Ruffray, Patrice and Vidal, Claude and Pierrat, Jean-Claude and Gégout, Jean-Claude},
+  date = {2011-11},
+  journaltitle = {Nature},
+  volume = {479},
+  pages = {517--520},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/nature10548},
+  url = {https://www.nature.com/articles/nature10548},
+  urldate = {2021-01-03},
+  abstract = {Climate change is causing a shift in plant species distributions, but the speed at which this happens depends on local conditions. A 2009 Nature paper (go.nature.com/yuz2we) showed that the velocity of climate change is higher in lowland than in highland areas, suggesting that the lag behind climate warming might be greater for lowland species than that for highland species. This suspicion is confirmed in a study of forests distributed across France. A comparison of temperature trends against temperatures reconstructed from thousands of species assemblages across a 44-year period (1965–2008) indicated a temperature lag between the climate and plant community composition in lowland forests that was more than three times that seen in highland forests. This finding has implications for conservation policy. Attention has focused on mountain-top extinctions as a likely consequence of climate warming, but the inertia of forest plant communities suggests that species in lowland forest ecosystems are also at risk.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\8YKBWVH2\\Bertrand et al. - 2011 - Changes in plant community composition lag behind .pdf;C\:\\Users\\Me\\Zotero\\storage\\VP3YX36B\\nature10548.html},
+  issue = {7374},
+  langid = {english},
+  number = {7374},
+  options = {useprefix=true}
+}
+
 @article{bertrandCommentForestMicroclimate2020,
   title = {Comment on “{{Forest}} Microclimate Dynamics Drive Plant Responses to Warming”},
   author = {Bertrand, Romain and Aubret, Fabien and Grenouillet, Gaël and Ribéron, Alexandre and Blanchet, Simon},
